# liblk

./: .gitignore  README.md  format.sh  main.py  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: liblk.yml
examples/: __init__.py  apply_binary_patch.py  dump_partitions.py  partition_manager.py
liblk/: Constants.py  Exceptions.py  LkImage.py  __init__.py  constants.py  exceptions.py  image.py
liblk/structure/: LkExtHeader.py  LkHeader.py  LkPartition.py  __init__.py
liblk/structures/: __init__.py  certificate.py  ext_header.py  header.py  partition.py
tests/: certificate_test.py  image_header_test.py  lk_image_test.py
tests/files/: lk.img  lk_legacy.img
